# python_pro_dev

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  justfile  main.py  pyproject.toml  trivy.yaml
conda_env/: dev_env.yml  dev_environment.yml  environment.yml
data/: housing_one_var.csv
docs/: bandit.md  brew.md  conda_pip.md  gitleaks.md  hypothesis.md  just.md  mypy.md  pip-audit.md  pre-commit-guide.md  pre-commit.md  pytest.md  ruff.md  uv.md
docs/guides/: bandit_user_guide.md  conda_pip.md  ml_project_structure.md  pip_audit_guide_v2.md  python_project_structure.md  trivy-user-guide.md
docs/guides/just/: just-uv-notes.md
docs/guides/nb_guide/: nb_diff_strategy.md  notebook_tools_guide.md
docs/guides/pytest/: pytest-notes.md
docs/guides/python_pro/: exception_handling_basic_pytest.md  professional_python_dev.md  python_dependancy_mgt.md
docs/guides/ref_template/: simple.toml
docs/guides/ruff_notes/: ruff_2.md
docs/just/: just-uv-notes.md  just.md
docs/python_pro/: professional-devops-guide.md  python-cicd-guide.md  python_dependancy_mgt.md
docs/ref_template/: sample.toml  sample_conda_use.toml
docs/ruff_notes/: ruff_setup.md  ruff_vscode_cheatsheet.md
docs/uv_notes/: uv v2.md
log/: nbdiff.txt
notebooks/: ML Master Notes 1 - Introduction to Machine Learning.ipynb  into_ml_1.ipynb  into_ml_2.ipynb
src/: main.py
tests/: test_add_func.py  test_main.py  test_multiply.py
