[project]
name = "python-pro-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=1.19.1",
    "pandas-stubs>=3.0.0.260204",
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]

# --- RUFF CONFIGURATION ---
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Core correctness & quality
select = [
  "E",    # pycodestyle (errors)
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "N",    # pep8-naming

  # Security (Bandit subset)
  "S",    # flake8-bandit rules

  # Maintainability (optional but valuable)
  "SIM",  # flake8-simplify
  "C4",   # flake8-comprehensions
]

# Intentional ignores
ignore = [
  "E501",   # handled by formatter
  "S101",   # allow assert (tests & invariants)
  "S311",   # allow random (not cryptographic by default)
  "T201",   # allow print (you already had this)
]

# Optional: per-file ignores (very useful)
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts are fine in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- MYPY CONFIGURATION ---
[tool.mypy]
python_version = "3.11"
exclude = ['^tests/']
strict = true # This turns on almost everything, including disallow_untyped_defs
show_error_codes = true
warn_unused_configs = true
# Essential for Conda: ignore libs without stubs so mypy doesn't crash on niche ML libs
ignore_missing_imports = true


# Don't enforce strict typing in tests
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false  # <--- Change this to false
check_untyped_defs = false     # <--- Also recommended for tests

# --- PYTEST CONFIGURATION ---
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers --cov=src --cov-report=term-missing"
log_cli = true

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
]

# --- BANDIT CONFIGURATION ---
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = []
